@@ -55,6 +55,9 @@ const char *decimal_point;
 #if HAVE_LOCALECONV
 struct lconv *
 localeconv (void)
+#if defined __cplusplus && defined __GLIBC__
+  throw()
+#endif
 {
   static struct lconv  l;
   l.decimal_point = (char *) decimal_point;
@@ -66,6 +69,9 @@ localeconv (void)
 #if HAVE_NL_LANGINFO
 char *
 nl_langinfo (nl_item n)
+#if defined __cplusplus && defined __GLIBC__
+  throw()
+#endif
 {
 #if defined (DECIMAL_POINT)
   if (n == DECIMAL_POINT)
